# litchi

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cicd.yml
cmake/: CMakeSetup.cmake  CoreutilsSetup.cmake  GccSetup.cmake  GlibSetup.cmake  IcuSetup.cmake  LibbacktraceSetup.cmake  LibffiSetup.cmake  LibpngSetup.cmake  MakeSetup.cmake  MesaSetup.cmake  Pcre2Setup.cmake  PkgCfgSetup.cmake  PythonSetup.cmake  QtSetup.cmake  TlchnSetup.cmake  Util.cmake  ZlibSetup.cmake
scr/chore/: AnlsBldLog.py  PrintBanner.py  PrnTee.py  RecCompilTm.py  analyze_build_log.sh  print_banner.sh
src/: main.cpp
src/com/: com.c  com.h  err.h  typ.h
src/drv/: tcp.cpp  tcp.h
src/drv/doip/: doip.cpp  doip.h
src/drv/tcp/: tcp.cpp  tcp.h
src/log/: log.c  log.h
src/win/: winMain.cpp  winMain.h  winMain.ui
